--- a/.gitignore
+++ b/.gitignore
@@ -55,17 +55,17 @@ coverage.xml
 *.mo
 *.pot
 
-# Django stuff:
+# Django:
 *.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
-# Flask stuff:
+# Flask:
 instance/
 .webassets-cache
 
-# Scrapy stuff:
+# Scrapy:
 .scrapy
 
 # Sphinx documentation
